[package]
name = "calamine-wasm"
version = "0.1.0"
edition = "2021"
description = "calamine (xlsx reader) compiled to WebAssembly for Node.js and browsers"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calamine-json-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
